# LuxMart_CPP_BackEnd

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMake-LuxMart_CPP_BackEnd.bat  CMakeCache - Copy.txt  CMakeLists copy  CMakeLists.txt  CMakeListsAlt.txt  Docker  Dockerfile  Dockerfile - funktioniert einwandfrei  Dockerfile2  LuxMart_CPP_BackEnd (2).vcxproj  LuxMart_CPP_BackEnd.sln  LuxMart_CPP_BackEnd.vcxproj.filters  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config (localhost).json  config.json  run.bat
LuxMart_CPP_BackEnd.dir/Debug/: LuxMart_CPP_BackEnd.exe.recipe  vc143.idb
LuxMart_CPP_BackEnd.dir/Debug/LuxMart_.B8594126.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
config/: config.json
include/controllers/: controllers.h
include/database/: dbOperations.h
include/models/: user_model.h
include/security/: authController.h  jwtConfig.h  jwtService.h  security.h
include/services/: functions.h
scr/: main.cpp
scr/controllers/: controllers (2).cpp  controllers-api-sum).cpp  controllers.cpp
scr/database/: dbOperations.cpp
scr/security/: security (2).cpp  security copy.cpp  security.cpp
scr/security/secConfig/: jwtService.cpp
scr/security/secController/: authController.cpp
scr/services/: functions.cpp
scr/temp/: ___db_connection.cpp  authController-2.cpp  authHandler.cpp  authHandler.h  authenticateUser-2.cpp  config.cpp  controllers (2) (2).cpp  controllers (2).cpp  dbOperations (2).cpp  main-cors.cpp  password_encoder.h  proxi.cpp  proxi2.cpp  securityFilter.h  tokenService.cpp  webConfig (2).cpp
scr/temp/routers/: api_routes.cpp
scr/temp/security/: security.cpp  tokenFilter.cpp
test/: test_main.cpp
(+11 files in other folders)
